infrastructure/kubernetes/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  namespace: staging
spec:
  defaultBackend:
    service:
      name: chronicle-frontend
      port:
        number: 80
